updating investors info
Updating photo and description

--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@ Previous to VRTIFY Facundo was a digital consultant and founded several tech sta
                                   </div>
                                   <div class="padding-sixteen-bottom">
                                       <span class="text-medium tz-text display-block"><p>
-          </p>Pablo is currently the co-founder of Blink, a New York based startup considered the world’s largest content production platform. He is also an advisor and investor in fintech, VR, NLP, IMS, e-commerce and security startups.</span>
+          </p>Pablo is a serial entrepreneur and seasoned executive. In the past 17 years he co-founded and exited several companies, including the first digital music store for the hispanic market, a startup incubator and an network of travel-related sites visited at its peak by 25M+ unique users per month. Pablo is currently an advisor and investor in crypto, fintech and VR startups and the co-founder of Blink, the world’s largest content production platform.</span>
                                   </div>
 
                               </div>
